small fixes + system dark mode

--- a/style.css
+++ b/style.css
@@ -6,17 +6,31 @@
 }
 /*Color Variables*/
 :root {
-  --bg-color: #f7f7f7;
-  --sb-color: #c6c6c6;
-  --red-color: #ee2211;
-  --about-b-hover: #b51b0d;
-  --white-color: #fff;
-  --black-color: #000;
+  --primary-color: #ee2211;
+  --primary-hover: #b51b0d;
+  --primary-bg-color: #f7f7f7;
+  --other-bg-color: #fff;
+  --text-color: #000;
+  --subtitle-color: #0000003e;
+  --bt-text: #fff;
+  --wave: url("./assets/onda.svg");
+}
+/* Dark Mode */
+@media (prefers-color-scheme: dark) {
+  :root {
+    --primary-bg-color: #111;
+    --other-bg-color: #000;
+    --subtitle-color: #ffffff3e;
+    --primary-color: #ee2211;
+    --primary-hover: #b51b0d;
+    --text-color: #fff;
+    --wave: url("./assets/onda-dark.svg");
+  }
 }
 /*General Styles*/
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: var(--bg-color);
+  background-color: var(--primary-bg-color);
   display: grid;
   justify-items: center;
   margin-top: 3.75rem;
@@ -48,14 +62,14 @@ header {
 .nav-item {
   display: block;
   text-align: center;
-  color: var(--black-color);
+  color: var(--text-color);
   padding: 0.625rem 1.25rem;
   border-radius: 0.25rem;
-  background-color: var(--white-color);
+  background-color: var(--other-bg-color);
   border: 0.125rem solid transparent;
 }
 .nav-item:hover {
-  border-color: var(--red-color);
+  border-color: var(--primary-color);
   transition: 0.2s;
 }
 /* Main Content Styles */
@@ -68,7 +82,8 @@ header {
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   text-align: right;
-  background-color: var(--white-color);
+  color: var(--text-color);
+  background-color: var(--other-bg-color);
   position: relative;
 }
 .about-bike img {
@@ -76,9 +91,11 @@ header {
   object-fit: cover;
 }
 .about-bike-text {
+  color: var(--text-color);
   padding: 2.5rem;
 }
 .about-bike h1 {
+  color: var(--text-color);
   font-size: 2rem;
 }
 .about-bike-text h1::before {
@@ -86,7 +103,7 @@ header {
   display: inline-block;
   height: 0.25rem;
   width: 3.75rem;
-  background-color: var(--red-color);
+  background-color: var(--primary-color);
   position: absolute;
   top: 2rem;
   right: calc(50% - 1.875rem);
@@ -96,27 +113,27 @@ header {
 }
 .about-button {
   display: block;
-  background-color: var(--red-color);
-  color: var(--white-color);
+  background-color: var(--primary-color);
+  color: var(--bt-text);
   justify-self: right;
   padding: 1rem 1.25rem;
   border-radius: 0.25rem;
 }
 .about-button:hover {
-  background-color: var(--about-b-hover);
+  background-color: var(--primary-hover);
   transition: 0.2s;
 }
 .subtitle-bg {
   display: grid;
   padding: 2.5rem;
-  background-image: url("./img/onda.svg");
+  background-image: var(--wave);
 }
 .subtitle {
   text-transform: uppercase;
   text-align: right;
   align-self: center;
   font-size: 4rem;
-  color: var(--sb-color);
+  color: var(--subtitle-color);
 }
 .bikcraft-advantages {
   display: grid;
@@ -124,11 +141,12 @@ header {
 }
 .advantages {
   display: grid;
-  background-color: var(--white-color);
+  background-color: var(--other-bg-color);
   padding: 2.5rem;
   gap: 1.25rem;
 }
 .advantages-item {
+  color: var(--text-color);
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 0.625rem 1.25rem;
@@ -137,7 +155,7 @@ header {
   border-left: 0.25rem solid transparent;
 }
 .advantages-item:nth-child(odd) {
-  background-color: var(--bg-color);
+  background-color: var(--primary-bg-color);
 }
 .advantages-item:before {
   content: "";
@@ -149,7 +167,7 @@ header {
   left: -0.25rem;
 }
 .advantages-item:hover:before {
-  background-color: var(--red-color);
+  background-color: var(--primary-color);
   transition: 0.2s;
 }
 .advantages-item h3,
@@ -158,7 +176,7 @@ p {
 }
 /* Footer Styles*/
 footer {
-  background-color: var(--white-color);
+  color: var(--text-color);
   width: 100%;
   text-align: center;
   padding: 2.5rem;
